rustc-hash新增bundle.json部件化
Signed-off-by: ljy9810 <longjianyin@h-partners.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -25,4 +25,7 @@ ohos_cargo_crate("lib") {
     cargo_pkg_name = "rustc-hash"
     cargo_pkg_description = "speed, non-cryptographic hash used in rustc"
     features = ["std"]
+    module_output_extension = ".rlib"
+    part_name = "rust_rustc_hash"
+    subsystem_name = "thirdparty"
 }
